js script refactor & visibility layout fix

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ input {
 }
 
 .hidden {
-    display: none;
+    visibility: hidden;
 }
 
 span {
